# ludos

./: Cargo.toml  README.md  flake.nix  package-lock.json  package.json
apps/applet/ui/: package.json  rollup.config.js
apps/applet/ui/src/: index.ts
apps/holo/dnas/ludos/: dna.yaml
apps/holo/ui/: package-lock.json  package.json
apps/holo/ui/public/: index.html
apps/holo/ui/src/: App.svelte
apps/holo/workdir/: happ.yaml  web-happ.yaml
apps/launcher/dnas/ludos/: dna.yaml
apps/launcher/ui/: package.json
apps/launcher/ui/public/: index.html
apps/launcher/ui/src/: App.svelte
dnas/ludos/workdir/: dna.yaml
dnas/ludos/zomes/coordinator/syn/: Cargo.toml
dnas/ludos/zomes/integrity/syn/: Cargo.toml
libs/ui/: package.json
libs/ui/src/lib/: AvatarDialog.svelte  BoardEditor.svelte  BoardList.svelte  BoardMenu.svelte  BoardPane.svelte  Controller.svelte  EditBoardDialog.svelte  EditRealmDialog.svelte  Folk.svelte  Map.svelte  NewBoardDialog.svelte  NewRealmDialog.svelte  ParticipantsDialog.svelte  RealmEditor.svelte  RealmPane.svelte  SpaceEditor.svelte  Terminal.svelte  Toolbar.svelte  board.ts  boardList.ts  index.js  ludosStore.ts  pane.ts  realm.ts
nix/: sources.json
ui/: .gitignore  index.html  package.json  tsconfig.json
ui/src/: App.svelte
ui/src/ludos/: Controller.svelte  EditRealmDialog.svelte  Map.svelte  NewRealmDialog.svelte  ParticipantsDialog.svelte  RealmMenu.svelte  RealmPane.svelte  SpaceEditor.svelte  Terminal.svelte  index.js  ludosStore.ts  realm.ts  realmList.ts
workdir/: happ.yaml  web-happ.yaml
(+1 files in other folders)
