[package]
name = "syn"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "syn"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
syn_integrity = { workspace = true } 
hc_zome_syn_coordinator = {git = "https://github.com/holochain/syn", branch = "for-hdk-v0.1.0"}

chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"


