[package]
name = "syn_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "syn_integrity"

[dependencies]
hc_zome_syn_integrity = {git = "https://github.com/holochain/syn", branch = "for-hdk-v0.1.0"}
hdi = { workspace = true }
serde = { workspace = true }

chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"

